--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "build-storybook": "build-storybook -c .storybook -o .out",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +33,7 @@
     ]
   },
   "devDependencies": {
-    "@storybook/react": "^5.1.9"
+    "@storybook/react": "^5.1.9",
+    "@storybook/storybook-deployer": "^2.8.1"
   }
 }
